# 6D-RGBD-Odometry

./: README.md
brand/: CMakeLists.txt  README.md  brand-config.cmake  brand.cpp  brand_match_demo.cpp
brand/src/: brand.cpp
brand_based_odometry/: 6d_odometry_nadia.cpp
brand_match/: CMakeLists.txt  README.md  README.txt  brand.h  brand_match_demo.cpp
brand_match/src/: brand_match_demo.cpp
brand_odometry/: 6d_odometry_nadia.cpp  CMakeLists.txt  brand_odometry.cpp
brand_odometry/src/: brand_odometry.cpp
odometry/: 6d_odometry_nadia_before_optimization.cpp
